@@ -1986,8 +1986,8 @@ public class MidiSynthesizer implements ToneMapConstants {
 			this.streamId = streamId;
 			bq = new LinkedBlockingQueue<>();
 			consumer = new MidiQueueConsumer(bq, this);
-			Thread.startVirtualThread(new MidiQueueConsumer(bq, this));
-			// new Thread(new MidiQueueConsumer(bq, this)).start();
+			// TODO LOOM Thread.startVirtualThread(new MidiQueueConsumer(bq, this));
+			new Thread(new MidiQueueConsumer(bq, this)).start();
 		}
 
 		public void close() {
